sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:21: error: not found: value sp
  } while (sp==true)
           ^